--- a/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
+++ b/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
@@ -13,16 +13,15 @@
     font-size: 1.1rem;
     font-weight: 500;
     position: absolute;
+    left: 1rem;
   }
   &::before {
     content: "<div>";
     top: -1.5rem;
-    left: 1rem;
   }
   &::after {
     content: "</div>";
     bottom: -1.5rem;
-    left: 1rem;
   }
 }
 
@@ -52,16 +51,15 @@
       font-size: 1.1rem;
       font-weight: 500;
       position: absolute;
+      left: 1rem;
     }
     &::before {
       content: "<div>";
       top: 0rem;
-      left: 1rem;
     }
     &::after {
       content: "</div>";
       bottom: 0rem;
-      left: 1rem;
     }
 
     .orbit {
